# pywrapped_svo

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  setup.py
include/: SVOWrapper.h  SvoWrapper.h
src/: SVOWrapper.cpp  SvoWrapper.cpp
src/pywrapped_svo/: __init__.py  _version.py
test/: test_01_creation.py  test_02_initialization.py  test_03_init_failure.py  test_04_full_pipeline.py
test/demo/: run_svo.py
